--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                 <div class="flex justify-center items-center h-full">
                     <div class="w-3/4">
                         <img style="border-radius: 37px;"
-                            src="./img3.png"
+                            src="ML.jpg"
                             alt="Image" class="w-full h-auto rounded-lg">
                     </div>
                 </div>
@@ -512,7 +512,7 @@
                 <div class="flex justify-center items-center h-full">
                     <div class="w-3/4 ">
                         <img style="border-radius: 37px;"
-                            src="file:///D:/personal%20projects%20for%20resume/Simple-html-portfolio-main/insurance.webp"
+                            src="./insurance.jpg"
                             alt="Image" class="w-full h-auto rounded-lg">
                     </div>
                 </div>
@@ -742,8 +742,8 @@ Joins to retrieve comprehensive information (e.g., policies associated with a cu
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <img style="border-radius: 38px; margin-left: 10%;"
-                                    src="file:///D:/personal%20projects%20for%20resume/Simple-html-portfolio-main/raki.webp"
+                                <img style="border-radius: 38px; margin-left: 5%; height: 500px;"
+                                    src="./raki.jpg"
                                     alt="Image" class="img-fluid">
                             </div>
                             <div class="col-md-6">
